# clerk

./: .gitignore  CMakeLists.txt  Readme.md  timing-stat-at-page-size-2k  timing-stat-at-page-size-8k  timing-stat-before-adjust
cle_core/: CMakeLists.txt  cle_clerk.h  cle_cli.c  cle_commit.c  cle_commit2.c  cle_compile.c  cle_compile.h  cle_eval.c  cle_iterate.c  cle_object.c  cle_object.h  cle_ops.c  cle_runtime.c  cle_runtime.h  cle_source.h  cle_stream.c  cle_stream.h  cle_struct.c  cle_struct.h  cle_task.c
cle_core/backends/: cle_backends.c  cle_backends.h  cle_logs_backend.c  cle_pages_backend.c
test_clerk/: CMakeLists.txt  test.h  test_clerk.vcproj  test_compile.c  test_instance.c  test_main.c  test_stream.c  test_util.c
